<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userName"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/userName_txt"
        android:inputType="text"
        android:text="@string/userName_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/Weight"
        app:layout_constraintTop_toBottomOf="@+id/Weight" />

    <EditText
        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/Birthday"
        app:layout_constraintTop_toBottomOf="@+id/Birthday" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="32dp"
        android:text="@string/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Height" />

    <TextView
        android:id="@+id/heightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/heightTitle_txt"
        app:layout_constraintBottom_toTopOf="@+id/Height"
        app:layout_constraintStart_toStartOf="@+id/Height" />

    <TextView
        android:id="@+id/weightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/weightTitle_txt"
        app:layout_constraintBottom_toTopOf="@+id/Weight"
        app:layout_constraintStart_toStartOf="@+id/Weight" />

    <TextView
        android:id="@+id/birthdayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/birthdayTitle_txt"
        app:layout_constraintBottom_toTopOf="@+id/Birthday"
        app:layout_constraintStart_toStartOf="@+id/Birthday" />

    <EditText
        android:id="@+id/Birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/dateFormat"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonFeminine" />

    <TextView
        android:id="@+id/genderSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/genderSelectorTitle_txt"
        app:layout_constraintBottom_toTopOf="@+id/radioButtonFeminine"
        app:layout_constraintStart_toStartOf="@+id/radioButtonFeminine" />

    <RadioButton
        android:id="@+id/radioButtonFeminine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/femaleButton_txt"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <RadioButton
        android:id="@+id/radioButtonMasculine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/maleButton_txt"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toEndOf="@+id/radioButtonFeminine"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/radioButtonMasculine"
        app:layout_constraintStart_toEndOf="@+id/radioButtonFeminine"
        app:layout_constraintTop_toTopOf="@+id/radioButtonFeminine" />

</androidx.constraintlayout.widget.ConstraintLayout>